--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,10 @@
   ],
   "dependencies": {
     "threads": "git@github.com:gaia-components/threads.git#master",
-    "alameda": "~0.2.0"
+    "alameda": "~0.2.0",
+    "gaia-header": "gaia-components/gaia-header#~0.8.1",
+    "gaia-text-input": "gaia-components/gaia-text-input#~0.1.1",
+    "gaia-theme": "gaia-components/gaia-theme#~0.4.6",
+    "gaia-button": "gaia-components/gaia-button#master"
   }
 }
