Tidy dir structure

--- a/bower.json
+++ b/bower.json
@@ -20,8 +20,7 @@
     "tests"
   ],
   "dependencies": {
-    "threads": "git@github.com:gaia-components/threads.git#master",
-    "alameda": "~0.2.0",
+    "threads": "gaia-components/threads.git#master",
     "gaia-header": "gaia-components/gaia-header#~0.8.1",
     "gaia-text-input": "gaia-components/gaia-text-input#~0.1.1",
     "gaia-theme": "gaia-components/gaia-theme#~0.4.6",
