--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,7 @@
     "tests"
   ],
   "dependencies": {
-    "threads": "gaia-components/threads.git#master",
+    "threads": "gaia-components/threads#master",
     "gaia-header": "gaia-components/gaia-header#~0.8.1",
     "gaia-text-input": "gaia-components/gaia-text-input#~0.1.1",
     "gaia-theme": "gaia-components/gaia-theme#~0.4.6",
